--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "ngx-bootstrap": "^4.3.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
@@ -36,10 +38,12 @@
     "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@types/datatables.net": "^1.10.17",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.30",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
